Ignore 'models' directories and untrack model artifacts
Add .gitignore entries to ignore all 'models' directories and common model artifact formats; untrack previously tracked model artifacts in bayesian_learning/models and regression/models so model artifacts won't be pushed to the repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
+# Ignore model artifact directories
+**/models/
+**/models/**
+
+# Ignore common serialized model formats inside models directories
+**/models/*.joblib
+**/models/*.pkl
+**/models/*.npz
+**/models/*.h5
+**/models/*.ckpt
+**/models/*.model
+
+# Ignore local Jupyter checkpoints
+.ipynb_checkpoints/
+
+# Ignore Python cache and virtual env
+__pycache__/
+*.py[cod]
+venv/
+.venv/
 __pycache__/
 *.pyc
 .venv/
